style.css
/*
Theme Name: Pinboard Child
Theme URI: 
Description: A child theme based on the free Pinboard theme
Author: Ken Zirkel
Template: pinboard
Version: 1.0.0
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html

*/

body, p {
	font-size: 105%;
	}

#wrapper {
	max-width: 1200px;
	}

/* header */

#masthead {
	display:block;
	margin-left: 50px;
    float:none;
}

/* overall site title in header  */

h1.site-title {
	font-size:60px;
	margin:0;
	padding:0;
    font-weight:600;
}

#header #searchform {
    margin-top:-40px;
   margin-left:18px;
}
 


/* header */


#site-description {
	float:none;
	display:block;
	margin:0;
	padding:0;
	}
h2.site-description {
	padding:0;
	margin-left:0;
	margin-top:-12px;
	margin-bottom:6px;
}	

.site-header-banner {
	width:100%;
	margin-bottom:-10px;
	padding:0;
	}

#sidebar-header {
	position:absolute;
	top:20px;
	left: 850px;
	width:300px;
	float:right;
}	


/* social icons */

.instagram {
	background-image: url(images/instagram.png);
}

/* only affect .iconwrapper at larger sizes */

@media screen and (min-width: 760px)  {

.iconwrapper          {
    position:absolute;
    top:100px;
    right:10px;
    height: 40px;
    float:right;

}

}



/* main navigation (menu bar) */

#access { 
	margin:0; 
	padding:0; 
    font-size:18px;
    background: #21759b;
}

#access ul {
    text-transform:none;
}




/* secondary navigation, ie, categories */

#secondary {
    font-size:14px;
	position: relative;
	z-index: 3;
	padding:0 20px;
	box-shadow:0 0 7px rgba(0, 0, 0, .1);
    padding:0;
	margin: 24px 24px -6px 26px;
    display:flex;
}

#secondary .menu-name {
    float:left;
    color: white;
	display:block;
	padding:6px 24px;
	color:#f0f0f0;
	text-transform:uppercase;
    background:#4a9b09;
/*    background: #f37902; */
	font-weight:600;
}
#secondary .menu-name::after {
    content: ": ";
	font-weight:600;
}

#secondary ul {
	float:left;
	padding:0;
	margin:0;
	list-style:none;
	font-weight:300;
	text-transform:uppercase;
    background:#4a9b09;
/*    background: #f37902; */
    width:100%;
}

#secondary li {
	position:relative;
	float:left;
	padding:0;
	margin:0;
}

#secondary ul li:first-child {
	padding-left:0;
}

#secondary a {
	display:block;
	padding:6px 24px;
	color:#f0f0f0;
	text-decoration:none;
	-moz-transition: background-color .25s ease, margin .25s ease;
	-webkit-transition: background-color .25s ease, margin .25s ease;
	-o-transition: background-color .25s ease, margin .25s ease;
	-ms-transition: background-color .25s ease, margin .25s ease;
	transition: background-color .25s ease, margin .25s ease;
}

#secondary a:hover,
#secondary li.current_page_item > a,
#secondary li.current-menu-item > a {
	background:rgba(255, 255, 255, .2);
	color:#fff;
	text-decoration:none;
}

#secondary a span {
	color:#999;
	font-size:11px;
	font-style:italic;
	font-weight:normal;
	line-height:1.62em;
	text-transform:none;
}



.easy-profile-widget-inner {
	font-size:15px;
	line-height:180%;
}	
.threefourthcol .threecol .entry {
    margin:3%;
}

.fourcol { 
    width: 23.9%;
}


/* home */

/* when the .entry is in three column grid, give it green background */

.threecol .entry {
    background: #4a9b09;
    color:#fff;
}


.entry-header h2.entry-title {
    font-size:150%;
    line-height:130%;
 /*   margin-top:-50px; */
    margin-bottom:6px;
    font-weight:600;
    letter-spacing:-.2px;
}
h2.entry-title a {
    color: #fff;
}
h2.entry-title a:hover {
    color:#d54e21;
}

figure {
    -webkit-margin-before:0;
    -webkit-margin-after:0;
    -webkit-margin-start:0;
    -webkit-margin-end:0;
    margin-bottom:0;
}

.entry-container .entry-header p.entry-date {
    font-weight: bold;
    font-size: 15px;
    color: #fff;
    margin:0;
    margin-top:-30px;
    background:none;
}  

/* sidebar */
.twocol { 
	width: 100%;
	}
.onecol {
    background:#ffe465;
     margin:3%; 
}

.page-template .onecol,
.error404 .onecol {
    background:#fff;
     margin:0; 
}

.widget-area li:nth-child(1) {
    border-top:1px solid #f37902;
    margin-top:10px;
}

.widget-area li {
    border-bottom:1px solid #f37902;
}

.onecol a {
    color:#f37902;
    font-weight:600;
}

.onecol a:hover {
    color:#21759b;
}

#sidebar { 
	color: #000; 
	}
.widget-title {
    font-size:30px;
    font-weight:600;
    letter-spacing:-.2px;
    color:#21759b;
}

/* posts */

.wp-post-image {
    margin-bottom:30px;
}

.entry-content p {
    font-size:120%;
}



/* pages */

.page .entry,
.single-post .entry {
    width:92%;
    margin-left: -10px;
    margin-top: -18px;
}

.single-post .entry-meta {
    color:#32bdf2;
}






@media screen and (max-width: 760px)  {
    
    #header {
    
    }    
    #masthead    {
        padding:0;
        width:100%;
        margin: 50px 3px 10px 3px;
        z-index: -50;
    }    
    
    h1.site-title {
	    font-size:56px;
        margin-bottom: 22px;
	    padding:6px;
        font-weight:600;
        line-height:110%;
		float:none;
		text-align:center;
	}
	

	
	h2.site-description {
		display: block;
		padding-bottom:18px;
        line-height:115%;
		float:none;
		text-align:center;
        font-size: 30px;
	}    

    .iconwrapper {
        float:right;
        text-align:center;
        display:block;
        width:100%;
        position: relative;
/*        top:10px;    */
        margin:0; padding:0;
        right:0;
    }    
    
#header #searchform {
		float:none;
		margin:0;
        text-align:center;
        padding:0;
        display:inline;	
        width: 100%;
        top:-12px;
 }

	
	#header input#s {
		position: relative;
		z-index: 999;
		display:inline;
		background:#ececec url(images/search.png) right center no-repeat;
		box-shadow:inset 1px 1px 5px 1px rgba(0, 0, 0, .1);
		text-indent: 0;
        width:40px;
	}
	#header input#s:focus {
		width: 100px;
		margin: 0;
	}
	
.site-header-banner {
	width:100%;
    margin-top:100px;
	margin-bottom:-10px;
	padding:0;
	}

    #access {
        background: none;
    }
	#access:target .menu {
		margin-top: 50px;
		background: #111;
	}   
    
    #sidebar .onecol,
    #sidebar .twocol {
        width:100%;
    }    

	#access .nav-show,
	#access a.nav-show:hover {
		background: url(images/nav.png) no-repeat;
		position: absolute;
		top: 10px;
    	right: 6%; 
		display:block;
		width: 40px;
		height: 32px !important;
		padding: 0;
		border: none;
		text-indent: -1000px;
	}   
    #secondary ul li {
        line-height:110%;
        margin-top:4px;
        margin-bottom:4px;
    }    
    
}


@media screen and (-webkit-min-device-pixel-ratio : 1.5), screen and (min-device-pixel-ratio : 1.5) {

	.instagram {
		background-image: url(images/instagram_2x.png);
		background-size:100%;
	}   
}

